syntax = "proto3";

// 文件
message ChatFile {
    string type = 1;          // 数据(data通道)类型("file")
    string file_name = 2;     // 文件名
    int64 file_size = 3;      // 文件大小
    string file_hash = 4;     // 文件哈希值
    bytes content = 5;        // 文件内容（Base64 编码）
}